# jsonmini

./: CMakeLists.txt  README.md
src/: jsonobject.cpp  jsonobject.hpp  jsonobjectexception.cpp  jsonobjectexception.hpp  jsontype.hpp
test/: CMakeLists.txt  complex_structure_test.cpp  exception_test.cpp  httputils.cpp  quick_type_test.cpp  web_api_test.cpp
test/data/: malformed_json.txt  page.json  types.json
